--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,8 @@
     <string name="title_tests">Тесты</string>
     <string name="title_profile">Профиль</string>
     <!-- Attributes -->
-    <string name="profile_img_content_desc">profile</string>
-    <string name="tests_img_content_desc">tests</string>
+    <string name="tests_img_content_desc">Кнопка поиска</string>
     <!-- Tests page -->
     <string name="search_hint">Поиск…</string>
-    <string name="search_button_desc">search</string>
+    <string name="filters_button_desc">Фильтры</string>
 </resources>
