--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <!-- Tests page -->
     <string name="search_hint">Поиск…</string>
     <string name="filters_button_desc">Фильтры</string>
+    <string name="test_menu_title">Тесты</string>
+    <string name="profile_menu_title">Профиль</string>
 </resources>
