Profile fragment part 2 (+ additional division by packages)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="profile_menu_title">Профиль</string>
     <!-- Profile fragment -->
     <string name="profile_icon_content_desc">Профиль</string>
+    <string name="security_settings_title">Безопасность</string>
+    <string name="account_settings_title">Аккаунт</string>
 </resources>
